[package]
name = "simpleweb"
version = "0.1.0"
edition = "2021"

[dependencies]
hwloc = "*"
rustls = "0.23.26"
mio = { version = "1.0.3", features = ["os-poll", "net"] }
once_cell = "1.21.3"
rustls-pemfile = "2.2.0"
num_cpus = "*"
socket2 = "*"
slab = "0.4.9"
bytes = "*"
http = "*"
s2n-quic = { path = "../s2n-quic/quic/s2n-quic", version = "1.57.0" }
s2n-quic-h3 = { path = "../s2n-quic/quic/s2n-quic-h3" }
h3 = '*'


[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "*"
